# docgen

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  dataset_generator.py  get_bounding_boxes.py  main.py  reformatter.py  requirements.txt  visualize.py
.github/workflows/: docker-image.yml
Warping/: README.md  requirements.txt  test.py  warper.py
WeasyPrint-55.0/weasyprint/: __init__.py
WeasyPrint-55.0/weasyprint/svg/: text.py
WeasyPrint-55.0/weasyprint/text/: line_break.py
WeasyPrint/weasyprint/: document.py  draw.py
genalog/: PKG-INFO  requirements.txt
img_backs/: remove_adobe_stock.py
low-level-drawing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  draw  draw.c
segmentator/: PreProcessor.py  Segmentator.py  test.py
templates/: letter.css.jinja  letter.html.jinja
templates/macro/: dimension.css.jinja
texts/: crawler-brief.txt  example.txt
utils/: file_util.py  image.py
